2013-09-18  Andreas K. Foerster  <info@akfoerster.de>

	* avtdata.h, avtdata.c: don't store stream start position

	* avtdata.h, avtdata.c: method read24

2013-09-16  Andreas K. Foerster  <info@akfoerster.de>

	* audio-common.c, audio-sdl.c avtinternals.h:
	read WAV or AU files with LPCM <=16Bit directly from file

2013-09-13  Andreas K. Foerster  <info@akfoerster.de>

	* avtdata.h, avtdata.c (fileno): new method

	* audio-common.c:
	try to use mmap for WAV or AU files with LPCM <=16Bit

2013-09-12  Andreas K. Foerster  <info@akfoerster.de>

	* audio-sdl.c (fill_audio): improve audio loop

	* pascal/akfavatar.pas: fix sound support

2013-09-05  Andreas K. Foerster  <info@akfoerster.de>

	* mfinger.xbm, mfinger_mask.xbm: new files
	avatar-sdl.c: adapted

2013-08-16  Andreas K. Foerster  <info@akfoerster.de>

	* avatar-sdl.c, audio-sdl.c, avatar.c: start porting to SDL2

------------------------------------------------------------------------

2013-08-13  Andreas K. Foerster  <info@akfoerster.de>

	* version 0.24.2 released

2013-08-09  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, avatar.c (avt_set_resize_key): new function
	lua/akfavatar-graphic.c (lgraphic_set_resize_key): new function
	lua/four_in_a_row.lua: adapted
	lua/clock.lua: adapted

2013-08-07  Andreas K. Foerster  <info@akfoerster.de>

	* lua/four_in_a_row.lua: play against computer

2013-08-05  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c, avtinternals.h (avt_last_key): new function

2013-08-04  Andreas K. Foerster  <info@akfoerster.de>

	* lua/akfavatar-graphic.c (lgraphic_set_pointer_motion_key):
	new function

	* avatar-sdl.c (avt_analyze_event):
	add pointer_motion_key only if it isn't there yet

2013-08-03  Andreas K. Foerster  <info@akfoerster.de>

	* lua/akfavatar-graphic.c (lgraphic_set_pointer_buttons_key)
	(lgraphic_get_pointer_position): new functions
	(luaopen_graphic, lgraphic_show): adapted

------------------------------------------------------------------------
